# lifecard

./: project.config.json  project.private.config.json
life-card-api/: .dockerignore  .env  .env.example  .env.production  Cargo.toml  DEPLOY.md  Dockerfile  container.config.json  deploy.sh  init-db.sh
life-card-api/migrations/: 001_initial_schema.sql  001_initial_schema_mysql.sql
life-card-api/src/: config.rs  error.rs  lib.rs  main.rs
life-card-api/src/db/: postgres.rs
life-card-api/src/handlers/: auth.rs  card.rs  exchange.rs  mod.rs  notification.rs  upload.rs  user.rs
life-card-api/src/middleware/: auth.rs  rate_limit.rs
life-card-api/src/models/: card.rs  common.rs  exchange.rs  mod.rs  user.rs
life-card-api/src/services/: card_service.rs  exchange_service.rs  mod.rs  recommendation_service.rs  user_service.rs
life-card-api/src/tasks/: exchange_expiration.rs  mod.rs
life-card-api/src/utils/: jwt.rs  password.rs  validation.rs
life-card-api/tests/: api_response_property_tests.rs  card_property_tests.proptest-regressions  card_property_tests.rs  exchange_property_tests.proptest-regressions  exchange_property_tests.rs  user_property_tests.rs
miniprogram/: app.json  app.ts  app.wxss  jest.config.js  package-lock.json  package.json  sitemap.json  tsconfig.json  tsconfig.test.json
miniprogram/services/: auth.ts  card.ts  exchange.ts  request.ts  upload.ts  user.ts
miniprogram/stores/: card.ts  exchange.ts  index.ts  notification.ts  user.ts
miniprogram/tests/: setup.ts  tsconfig.json
miniprogram/types/: api.ts  card.ts  exchange.ts  index.ts  (+1 more)
(+123 files in other folders)
