[package]
name = "life_card_api"
version = "0.1.0"
edition = "2021"
description = "人生卡片App MVP后端 - Life Card Exchange Platform API"
authors = ["Life Card Team"]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json"
]}

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Testing utilities
tokio-test = "0.4"
fake = { version = "2.9", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
